# agentstuff

./: .gitignore  main.py  pyproject.toml
tools/: mathematics.py  query.py  text_operations.py
