[tool.poetry]
name = "agentstuff"
version = "0.1.0"
description = "This is just to fuck around with agents."
authors = ["sidhant-sriv <sidhant.sriv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
